# RobotHub-InferenceServer

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  README_INTEGRATION.md  api-schema.yaml  launch_simple.py  openapi.json  pyproject.toml  test_integration.py
.github/workflows/: sync-to-hf.yml
client/: README.md  openapi.json  package.json  tsconfig.json
client/examples/: basic-usage.ts
client/src/: index.ts  schemas.gen.ts  services.gen.ts  types.gen.ts
src/inference_server/: __init__.py  cli.py  export_openapi.py  main.py  session_manager.py  simple_integrated.py  ui.py
src/inference_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/inference_server/models/: __init__.py  act_inference.py  base_inference.py  diffusion_inference.py  joint_config.py  pi0_inference.py  pi0fast_inference.py  smolvla_inference.py
