[project]
name = "inference-server"
version = "0.1.0"
description = "ACT Model Inference Server for Real-time Robot Control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiortc>=1.13.0",
    "av>=14.4.0",
    "einops>=0.7.0",
    "fastapi>=0.115.12",
    "gradio>=5.34.2",
    "httpx>=0.28.1",
    "huggingface-hub>=0.32.4",
    "imageio[ffmpeg]>=2.37.0",
    "lerobot",
    "robothub-transport-server-client",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "psutil>=7.0.0",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.34.3",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
]

[tool.uv.sources]
robothub_transport_server_client = { path = "./external/RobotHub-TransportServer/client/python", editable = true }
lerobot = { path = "./external/lerobot", editable = false }
